force-app/main/default/objects/SDO_ChannelPartner_Certification__c/SDO_ChannelPartner_Certification__c.object-meta.xml
<CustomObject>
    <description>What: Used for Channel Partners to indicate which certifications they have achieved.
Who: Sales Team</description>
    <label>Certification</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>