force-app/main/default/objects/SDO_ChannelPartner_Certification__c/fields/Certificate_Price__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Price__c</fullName>
    <label>Certificate Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>