force-app/main/default/objects/SDO_ChannelPartner_Certification__c/fields/Certification_Category__c.field-meta.xml
<CustomField>
    <fullName>Certification_Category__c</fullName>
    <label>Certification Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>