force-app/main/default/objects/SDO_ChannelPartner_Certification__c/fields/Number_of_Certificate_Holders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Certificate_Holders__c</fullName>
    <label>Number of Certificate Holders</label>
    <summaryForeignKey>Certified_Employee__c.Certification__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>