force-app/main/default/objects/SDO_ChannelPartner_Certification__c/fields/Retake_Price__c.field-meta.xml
<CustomField>
    <fullName>Retake_Price__c</fullName>
    <label>Retake Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>