force-app/main/default/objects/SDO_ChannelPartner_Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>