force-app/main/default/objects/SDO_ChannelPartner_Certification__c/listViews/SDO_Experience_My_Certifications.listView-meta.xml
<ListView>
    <fullName>SDO_Experience_My_Certifications</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Certifications</label>
</ListView>